# pdf_translation

./: .gitignore  LICENSE  README.md  entrypoint.sh  pyproject.toml
apps/translator/: models.py  urls.py  views.py
apps/translator/migrations/: 0001_initial.py  0002_delete_document.py
apps/upload/: forms.py  models.py  urls.py  views.py
apps/upload/migrations/: 0001_initial.py
apps/user/management/commands/: createcustomsuperuser.py
apps/user/migrations/: 0001_initial.py
config/: asgi.py  urls.py
config/settings/: base.py
sandbox/: extract_pdf.py  main.py  pdfminer_main.py  replace_pdf.py  test.html  translate.py
templates/: base.html
templates/translator/: upload.html
web/: settings.py
