[tool.poetry]
name = "pdf-translation"
version = "0.1.0"
description = ""
authors = ["2lu3 <hi2lu3@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2"
django-stubs = "^1.16.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
