[tool.poetry]
name = "pdf-translation"
version = "0.1.0"
description = ""
authors = ["2lu3 <hi2lu3@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<3.12"
Django = "^4.2"
django-stubs = "^1.16.0"
requests = "^2.28.2"
pdfminer-six = "^20221105"
scipy = "^1.10.1"
pypdf = "^3.8.1"
pymupdf = "^1.22.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
